--- a/fan.css
+++ b/fan.css
@@ -3,51 +3,53 @@
     padding: 0%;
 }
 body{
-    background: #e5c2c2;
+    background: rgb(172, 163, 163);
 }
 header{
     background: #000;
-    height: 40px;
-    width: auto;
+    margin-left: 1%;
+    margin-right: 1%;
+    height: 50px;
 }
-nav{
-    padding: 10px;
-    margin-left: 3%;
-    
-}
-nav h1{
+header nav h1 a{
+    color: whitesmoke;
+    text-decoration: none;
+    font-size: 30px;
     float: left;
+    margin-left: 1%;
+    margin-top: 1%;
     font-weight: bold;
 }
-nav h1 a{
-    text-decoration: none;
-    color: whitesmoke;
-
-}
-nav h1 a:hover{
-    color: #0eed19;
+header nav h1 a:hover{
+    color: #0fef52;
 }
 nav ul li{
     display: inline-block;
-    margin-left: 3%;
-    margin-top: %;
-    font-size: 20px;
-    font-weight: bold;   
+    float: right;
+    margin-top: 1.5%;
+    padding: 1%;
+    margin-right: 1%;
 }
 nav ul li a{
     text-decoration: none;
     color: whitesmoke;
-   
+    font-weight: bold;
 }
 nav ul li a:hover{
-    
-    color: hsla(139, 92%, 45%, 0.861);
+    color: #0fef52;
 }
-.head{
-    margin-left: 5%;
-    margin-top: 5%;
+.table h1{
+    margin-left: %;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
-table{
-    margin-top: 2%;
+.table{
     margin-left: 5%;
+}
+marquee{
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
 }
