--- a/surface.css
+++ b/surface.css
@@ -3,44 +3,58 @@
     padding: 0%;
 }
 body{
-    background: rgb(160, 132, 136);
+    background: #939292;
 }
 header{
-    background: lightblue;
-    margin: auto;
-}
-h1{
-    padding-left: 1%;
-    padding-top: 2%;
-}
-h1 a{
-    display: inline-block;
-    text-align: left;
-    text-decoration: none;
-}
-ul{
-    font-size: 20px;
-    text-align: right;
-    padding-right: 1%;
-}
-ul li{
-    display: inline-block;
-    padding: 1%;
-}
-ul li a{
-    display: inline-block;
-    text-decoration: none;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-div{
-    padding: 5%;
-}
-.title{
+    background: #000;
     margin-top: 2%;
-    background: ;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+header nav h1 a{
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 30px;
+    float: left;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-right: 2%;
+    font-weight: bold;
+}
+header nav h1 a:hover{
+    color: #09e83d;
+}
+nav ul li{
+    display: inline-block;
+    margin-top: 1.5%;
+    margin-bottom: 1%;
+   padding: 1%;
+   
+}
+nav ul li a{
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 15px;
+    font-weight: bold;
+}
+nav ul li a:hover{
+    color: #09e83d;
+}
+.table{
+    float: left;
+}
+.table h1{
+    margin-bottom: 3%;
+}
+.table{
+    margin-left: 3%;
+    margin-top: 3%;
+}
+marquee{
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 1%;
     margin-left: 3%;
     margin-right: 3%;
-    color: rgb(22, 22, 22);
-    font-weight: bold;
-    font-size: 30px;
 }
