--- a/acc.css
+++ b/acc.css
@@ -36,3 +36,10 @@ ul li a{
 div{
     padding: 5%;
 }
+marquee{
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
