--- a/silk.css
+++ b/silk.css
@@ -35,3 +35,10 @@ ul li a{
 div{
     padding: 5%;
 }
+marquee{
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 1%;
+    margin-left: 3%;
+    margin-right: 3%;
+}
